--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-deck-swiper": "^2.0.5",
+    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-swiper": "^1.6.0",
+    "react-native-swiper-hooks": "^1.2.9",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
